--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <head>
     <title>Мой первый сайт.</title>
 </head>
+    body {
+            background-color: #87CEEB;
+        }
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhYykAt2E4MYQCCqm3GzeVgjdB2r9gxIJYHA&s"> </img>
 </html>
